# cybershuttle-notebook-gateway

./: .gitignore  Dockerfile  README.md  environment.yml  environment_docker.yml  example.ipynb  example_load.ipynb
.ipynb_checkpoints/: example-checkpoint.ipynb
cybershuttle_agent/: go.mod  main.go  test_conn.json
cybershuttle_gateway/: MANIFEST.in  README.md  pyproject.toml
cybershuttle_gateway/cybershuttle_gateway/: __init__.py  __main__.py  config.py  exceptions.py  typing.py  util.py
cybershuttle_gateway/cybershuttle_gateway/api/: __init__.py  slurm.py
cybershuttle_gateway/cybershuttle_gateway/templates/: index.html  sbatch.sh
cybershuttle_gateway/cybershuttle_gateway/transport/: __init__.py  grpc.py  kafka.py  websocket.py  zmq.py
cybershuttle_nbplugin/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  kernel_sync_daemon.py  package.json  pyproject.toml
cybershuttle_nbplugin/.github/workflows/: build.yml  check-release.yml
cybershuttle_nbplugin/cybershuttle_nbplugin/: __init__.py  handlers.py
cybershuttle_nbplugin/jupyter-config/server-config/: cybershuttle_nbplugin.json
cybershuttle_nbplugin/schema/: plugin.json
cybershuttle_nbplugin/src/: change_kernel.ts  handler.ts  index.ts  kernel_launcher.tsx
cybershuttle_provisioners/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
cybershuttle_provisioners/cybershuttle_provisioners/: __init__.py  config.py  cybershuttle.py  exceptions.py  slurm_local.py  slurm_remote.py  templating.py
cybershuttle_provisioners/cybershuttle_provisioners/api/: __init__.py  cybershuttle.py  slurm.py
cybershuttle_provisioners/cybershuttle_provisioners/templates/: sbatch.sh
testing/: stats.txt
